src/Ceres.Chess/NNEvaluators/Base/TensorRT/Native/TensorRTWrapper.h

    // =========================================================================
    // Engine Management
    // =========================================================================

    // Opaque handle to a TensorRT engine + context pair
    typedef void* TRT_EngineHandle;
    // Build options for TensorRT engine
    struct TRT_BuildOptions
    {
        int32_t builderOptimizationLevel;  // 0-5, default 3
        int32_t tilingOptimizationLevel;   // -1 to use default, 0-5 otherwise
        int32_t useSpinWait;               // 1 = true (default), 0 = false
        int32_t useCudaGraphs;             // 1 = true, 0 = false (default)
        int32_t useFP16;                   // 1 = true (default), 0 = false
        int32_t useBF16;                   // 1 = true, 0 = false (default)
        int32_t useFP8;                    // 1 = true, 0 = false (default)
        int32_t useBest;                   // 1 = true, 0 = false (default) - use best precision
        int32_t minBatchSize;              // Min batch size for optimization profile (0 = use batchSize)
        int32_t optBatchSize;              // Optimal batch size for optimization profile (0 = use batchSize)
        int32_t maxBatchSize;              // Max batch size for optimization profile (0 = use batchSize)
        int32_t fp32PostAttentionNorm;     // 1 = force FP32 for post-attention norm (ln1) layers, 0 = false (default)
        int32_t fp32PostAttentionNormStrict; // 1 = stricter filter: only main encoder ln1, exclude smolgen ln1
        int32_t fp32SmolgenNorm;           // 1 = only smolgen-related ln1 inside attention (the critical layers)
        int32_t refittable;                // 1 = enable refit support (kREFIT_IDENTICAL), 0 = false (default)
    };
    // =========================================================================
    // Dynamic Batch Size Inference (for range-mode engines)
    // =========================================================================

    // Run inference with dynamic batch size (for engines built with min/max batch range).
    // actualBatchSize: the actual number of positions to process (must be <= engine's max batch)
    // inputSize/outputSize: sizes in ELEMENTS for the actual batch (not the engine's max batch)
    // Returns 0 on success.
    TRT_API int32_t TRT_InferHostDynamic(TRT_EngineHandle handle,
                                          void* inputData, int64_t inputSize,
                                          void* outputData, int64_t outputSize,
                                          int32_t actualBatchSize);
    // Same as TRT_InferHostDynamic but for byte (INT8/UINT8) inputs.
    TRT_API int32_t TRT_InferHostBytesDynamic(TRT_EngineHandle handle,
                                               void* inputData, int64_t inputSize,
                                               void* outputData, int64_t outputSize,
                                               int32_t actualBatchSize);
    // Get the batch size the engine was built with (max batch for range engines).
    TRT_API int32_t TRT_GetEngineBatchSize(TRT_EngineHandle handle);
    // =========================================================================
    // Multi-Profile Engine (shared weights, N execution contexts)
    // =========================================================================

    // Build a single engine with N optimization profiles (one per batch size),
    // then create N independent execution contexts sharing that engine.
    // outHandles must point to an array of numProfiles TRT_EngineHandle slots.
    // Returns 0 on success, negative on error.
    TRT_API int32_t TRT_LoadONNXMultiProfile(const char* onnxPath,
        const int32_t* batchSizes, int32_t numProfiles,
        const TRT_BuildOptions* options, int32_t deviceId,
        TRT_EngineHandle* outHandles);
    // Multi-profile engine with caching support.
    // Serializes/deserializes a single engine file containing all profiles.
    TRT_API int32_t TRT_LoadONNXMultiProfileCached(const char* onnxPath,
        const int32_t* batchSizes, int32_t numProfiles,
        const TRT_BuildOptions* options, int32_t deviceId,
        const char* cacheDir, int32_t forceRebuild,
        int32_t* outWasCached, TRT_EngineHandle* outHandles);
    // Generate cache filename for a multi-profile engine.
    // Caller must free returned string with TRT_FreeString.
    TRT_API char* TRT_GenerateMultiProfileCacheFilename(const char* onnxPath,
        const int32_t* batchSizes, int32_t numProfiles,
        const TRT_BuildOptions* options, int32_t deviceId);
    // Check if this engine uses CUDA graphs for inference.
    // Returns 1 if enabled, 0 if disabled, -1 on error.
    TRT_API int32_t TRT_UsesCudaGraphs(TRT_EngineHandle handle);
    // Check if a stream graph has already been captured.
    // Returns 1 if captured, 0 if not captured, -1 on error.
    TRT_API int32_t TRT_IsStreamGraphCaptured(TRT_EngineHandle handle, int32_t streamIdx);
    // Get input elements per position (total input size / batch size).
    TRT_API int64_t TRT_GetInputElementsPerPosition(TRT_EngineHandle handle);
    // Get output elements per position (total output size / batch size).
    TRT_API int64_t TRT_GetOutputElementsPerPosition(TRT_EngineHandle handle);
    // =========================================================================
    // Weight Refitting (for refittable engines)
    // =========================================================================

    // Set weights for a named tensor in the engine. Requires engine built with refittable=1.
    // weightTensorName: name of the weight tensor to update (e.g., "conv1.weight")
    // weights: pointer to FP16 weight data
    // numElements: number of elements in the weights array
    // Returns 0 on success, negative on error.
    TRT_API int32_t TRT_SetNamedWeights(TRT_EngineHandle handle, const char* weightTensorName,
                                         const void* weights, int64_t numElements);
    // Refit the engine after setting weights. Must be called after TRT_SetNamedWeights
    // to apply the weight changes. Returns 0 on success, negative on error.
    TRT_API int32_t TRT_RefitEngine(TRT_EngineHandle handle);