src/Ceres.Chess/NNEvaluators/Base/TensorRT/TensorRTNative.cs


  // =========================================================================
  // Dynamic Batch Size Inference (for range-mode engines)
  // =========================================================================

  [LibraryImport(LibraryName, EntryPoint = "TRT_InferHostDynamic")]
  internal static unsafe partial int InferHostDynamic(IntPtr handle, Half* inputData, long inputSize,
                                                       Half* outputData, long outputSize, int actualBatchSize);

  [LibraryImport(LibraryName, EntryPoint = "TRT_InferHostBytesDynamic")]
  internal static unsafe partial int InferHostBytesDynamic(IntPtr handle, byte* inputData, long inputSize,
                                                            Half* outputData, long outputSize, int actualBatchSize);

  [LibraryImport(LibraryName, EntryPoint = "TRT_GetEngineBatchSize")]
  internal static partial int GetEngineBatchSize(IntPtr handle);

  [LibraryImport(LibraryName, EntryPoint = "TRT_UsesCudaGraphs")]
  internal static partial int UsesCudaGraphs(IntPtr handle);

  [LibraryImport(LibraryName, EntryPoint = "TRT_IsStreamGraphCaptured")]
  internal static partial int IsStreamGraphCaptured(IntPtr handle, int streamIdx);

  [LibraryImport(LibraryName, EntryPoint = "TRT_GetInputElementsPerPosition")]
  internal static partial long GetInputElementsPerPosition(IntPtr handle);

  [LibraryImport(LibraryName, EntryPoint = "TRT_GetOutputElementsPerPosition")]
  internal static partial long GetOutputElementsPerPosition(IntPtr handle);

  // =========================================================================
  // Multi-Profile Engine (shared weights, N execution contexts)
  // =========================================================================

  [LibraryImport(LibraryName, EntryPoint = "TRT_LoadONNXMultiProfile", StringMarshalling = StringMarshalling.Utf8)]
  internal static unsafe partial int LoadONNXMultiProfile(string onnxPath,
      int* batchSizes, int numProfiles,
      ref TensorRTBuildOptions options, int deviceId,
      IntPtr* outHandles);

  [LibraryImport(LibraryName, EntryPoint = "TRT_LoadONNXMultiProfileCached", StringMarshalling = StringMarshalling.Utf8)]
  internal static unsafe partial int LoadONNXMultiProfileCached(string onnxPath,
      int* batchSizes, int numProfiles,
      ref TensorRTBuildOptions options, int deviceId,
      string cacheDir, int forceRebuild,
      out int wasCached, IntPtr* outHandles);

  [LibraryImport(LibraryName, EntryPoint = "TRT_GenerateMultiProfileCacheFilename", StringMarshalling = StringMarshalling.Utf8)]
  internal static unsafe partial IntPtr GenerateMultiProfileCacheFilename(string onnxPath,
      int* batchSizes, int numProfiles,
      ref TensorRTBuildOptions options, int deviceId);

  // =========================================================================
  // Weight Refitting (for refittable engines)
  // =========================================================================

  [LibraryImport(LibraryName, EntryPoint = "TRT_SetNamedWeights", StringMarshalling = StringMarshalling.Utf8)]
  internal static unsafe partial int SetNamedWeights(IntPtr handle, string weightTensorName,
                                                      Half* weights, long numElements);

  [LibraryImport(LibraryName, EntryPoint = "TRT_RefitEngine")]
  internal static partial int RefitEngine(IntPtr handle);

  // =========================================================================
  // Helper methods
  // =========================================================================

  internal static string GetLastErrorString()
  {
    IntPtr ptr = GetLastError();
    return ptr == IntPtr.Zero ? null : Marshal.PtrToStringAnsi(ptr);
  }

  internal static string PtrToString(IntPtr ptr)
  {
    return ptr == IntPtr.Zero ? null : Marshal.PtrToStringAnsi(ptr);
  }

  /// <summary>
  /// Get the device name string for a GPU device.
  /// </summary>
  internal static string GetDeviceName(int deviceId)
  {
    IntPtr ptr = GetDeviceNamePtr(deviceId);
    return ptr == IntPtr.Zero ? "Unknown" : Marshal.PtrToStringAnsi(ptr);
  }
}
